Fix mobile horizontal overflow on docs pages after Docsy 0.13 upgrade

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -13,6 +13,7 @@ $announcement-size-adjustment: 8px;
 
   main {
     padding-left: 2rem;
+    min-width: 0;
 
     *:not(figure) > img {
       max-width: 100%;
